fixed font flickering on mainpage

--- a/src/app.css
+++ b/src/app.css
@@ -23,7 +23,7 @@
 		font-family: 'Inter';
 		font-style: normal;
 		font-weight: 400;
-		font-display: swap;
+		font-display: block;
 		src: url('/fonts/Inter-Variable.ttf') format('truetype');
 	}
 
@@ -31,7 +31,7 @@
 		font-family: 'VT323';
 		font-style: normal;
 		font-weight: 400;
-		font-display: swap;
+		font-display: block;
 		src: url('/fonts/VT323.ttf') format('truetype');
 	}
 }
